--- a/src/stylesheets/components/_header.scss
+++ b/src/stylesheets/components/_header.scss
@@ -9,8 +9,6 @@
 }
 
 .brain {
-  background-size: auto;
-  background-repeat: no-repeat;
   margin: 0 auto;
   padding: 1rem;
   width: 30rem;
